making the report calls get multiple service types
